modify project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-project(CalcGTK)
+project(GtkCalc)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -28,5 +28,5 @@ SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_LIST_DIR}/packet_app/bin)
 
 AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} DIR_SRCS)
 
-ADD_EXECUTABLE(CalcGTK ${DIR_SRCS})
-TARGET_LINK_LIBRARIES(CalcGTK ${GTK3_LIBRARIES} ${GMODULE_LIBRARIES})
+ADD_EXECUTABLE(GtkCalc ${DIR_SRCS})
+TARGET_LINK_LIBRARIES(GtkCalc ${GTK3_LIBRARIES} ${GMODULE_LIBRARIES})
